assets/css/bio.css
header {
    background-color: rgb(61, 60, 60);
    color: whitesmoke;
    text-align: center;
    width: 100%;
    height: 10%;

}

.header {
    position: relative;
    top: 10px;
}

section {
    background-color: rgb(231, 236, 231);
    width: 100%;
    height: 400px;
}

article {
}

img {
    position: relative;
    left: 40px;

}

#name {
    width: 200px;
    height: 25px;
    border: 2px solid green;
    position: relative;
    left: 40px;
}

p {
    border: 2px solid pink;
    position: relative;
    width: 575px;
    left: 300px;
    top: -221px;
}

#contact-info {
    position: relative;
    left: 1100px;
    top: -350px;
}

ul {
    position: relative;
    left: 1100px;
    top: -350px;
}

li {
    font-weight: bolder;
}

a {
    text-decoration: none;
}

a:link {
    color: green;
}

a:visited {
    color: red;
}

a:hover {
    color: darkblue;
}

a:active {
    color: yellow;
}

