fixed margin collapse between header and section

--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -1,24 +1,33 @@
+/* body {
+    background-color: rgb(231, 236, 231);
+} */
+
+html, body, section {
+    padding: 0;
+    border: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 header {
     background-color: rgb(61, 60, 60);
     color: whitesmoke;
     text-align: center;
     width: 100%;
-    height: 10%;
+    height: 100px;
+    margin-bottom: -20px;
 
 }
 
 .header {
     position: relative;
-    top: 10px;
+    top: 25px;
 }
 
 section {
     background-color: rgb(231, 236, 231);
     width: 100%;
     height: 400px;
-}
-
-article {
 }
 
 img {
@@ -30,13 +39,11 @@ img {
 #name {
     width: 200px;
     height: 25px;
-    border: 2px solid green;
     position: relative;
     left: 40px;
 }
 
 p {
-    border: 2px solid pink;
     position: relative;
     width: 575px;
     left: 300px;
@@ -46,7 +53,7 @@ p {
 #contact-info {
     position: relative;
     left: 1100px;
-    top: -350px;
+    top: -340px;
 }
 
 ul {
